<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->


    <PreferenceCategory
        android:title="Storen"
        android:textSize="48dp"
        android:textColor="@android:color/white">

    <SwitchPreference
        android:defaultValue="false"
        android:key="shutter_wakeup_switch"
        android:summary="@string/pref_shutter_wakeup_switch_summary"
        android:title="@string/pref_shutter_wakeup_switch_title"
        android:background="@color/colorPrimaryDark"/>

    <MultiSelectListPreference
        android:key="wakeup_days"
        android:summary="Wochentage mit Storenwecker"
        android:title="Wecktage"
        android:entries="@array/weekdays"
        android:entryValues="@array/weekdays_values"
        android:defaultValue="@array/empty_array"/>

    <EditTextPreference
        android:defaultValue="08:00"
        android:inputType="time"
        android:key="wakeup_time"
        android:title="@string/pref_shutter_wakeup_time_title"
        android:summary="@string/pref_shutter_wakeup_time_summary"/>

    <EditTextPreference
        android:defaultValue="10"
        android:inputType="time"
        android:key="wakeup_time_step"
        android:title="@string/pref_shutter_wakeup_step_time_title"
        android:summary="@string/pref_shutter_wakeup_step_time_summary"/>

   </PreferenceCategory>

</PreferenceScreen>
