<preference-headers xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@android:style/Theme.Translucent"
    android:background="@drawable/background_settings_right">

    <header
        android:fragment="biz.kindler.rigi.settings.GeneralPreferenceFragment"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/pref_header_general"
        android:background="@color/colorPrimaryDark"/>

    <header
        android:fragment="biz.kindler.rigi.settings.GaragePreferenceFragment"
        android:icon="@drawable/ic_directions_car_black_24dp"
        android:title="Garage"
        android:background="@color/colorPrimaryDark"/>

    <header
        android:fragment="biz.kindler.rigi.settings.ShutterPreferenceFragment"
        android:icon="@drawable/ic_beach_access_black_24dp"
        android:title="Storen"
        android:background="@color/colorPrimaryDark"/>

    <header
        android:fragment="biz.kindler.rigi.settings.LightPreferenceFragment"
        android:icon="@drawable/ic_wb_incandescent_black_24dp"
        android:title="Licht"
        android:background="@color/colorPrimaryDark"/>

    <header
        android:fragment="biz.kindler.rigi.settings.SitzplatzPreferenceFragment"
        android:icon="@drawable/ic_power_black_48dp"
        android:title="Steckdosen"
        android:background="@color/colorPrimaryDark"/>

    <header
        android:fragment="biz.kindler.rigi.settings.WateringPreferenceFragment"
        android:icon="@drawable/ic_local_florist_black_24dp"
        android:title="Bewässerung"
        android:background="@color/colorPrimaryDark"/>

    <header
        android:fragment="biz.kindler.rigi.settings.KioskPreferenceFragment"
        android:icon="@drawable/ic_personal_video_black_24dp"
        android:title="@string/pref_header_kiosk"
        android:background="@color/colorPrimaryDark"/>

    <header
        android:fragment="biz.kindler.rigi.settings.LogPreferenceFragment"
        android:icon="@drawable/ic_cloud_upload_black_24dp"
        android:title="@string/pref_header_log"
        android:background="@color/colorPrimaryDark"/>

    <header
        android:fragment="biz.kindler.rigi.settings.CalendarPreferenceFragment"
        android:icon="@drawable/baseline_date_range_black_36dp"
        android:title="@string/pref_header_calendar"
        android:background="@color/colorPrimaryDark"/>

    <header
        android:fragment="biz.kindler.rigi.settings.PublicTransportPreferenceFragment"
        android:icon="@drawable/ic_directions_car_black_24dp"
        android:title="@string/pref_header_transport"
        android:background="@color/colorPrimaryDark"/>

    <header
        android:fragment="biz.kindler.rigi.settings.SoundPreferenceFragment2"
        android:icon="@drawable/ic_audiotrack_black_36dp"
        android:title="@string/pref_header_sound"
        android:background="@color/colorPrimaryDark"/>


    <header
        android:fragment="biz.kindler.rigi.settings.NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />
    <!--
    <header
        android:fragment="biz.kindler.rigi.settings.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />  -->

</preference-headers>
