<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@android:style/Theme.Translucent"
    android:background="@drawable/background_settings1">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <PreferenceCategory
        android:title="Steckdosen"
        android:textSize="48dp"
        android:textColor="@android:color/white">

    <SwitchPreference
        android:defaultValue="false"
        android:key="plug-timer"
        android:summary=""
        android:title="@string/pref_plug_title"
        android:background="@color/colorPrimaryDark"/>

    <Preference
        android:defaultValue="22:00"
        android:key="plug-on"
        android:title="@string/pref_plug_on_title"
        android:summary=""/>

    <Preference
        android:defaultValue="00:00"
        android:key="plug-off"
        android:title="@string/pref_plug_off_title"
        android:summary=""/>

    </PreferenceCategory>

</PreferenceScreen>
